added swagger ui enable try it out

--- a/school-api/src/main/resources/application.yml
+++ b/school-api/src/main/resources/application.yml
@@ -51,3 +51,8 @@ app:
     login:
       max-failed-attempts: 5
       lockout-duration: 300 # 5 minutes in seconds
+
+springdoc:
+  swagger-ui:
+    try-it-out-enabled: true
+    tags-sorter: alpha
