added necessary frontend packages

--- a/school-fe/package.json
+++ b/school-fe/package.json
@@ -16,13 +16,24 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^19.0.1",
+    "@ng-select/ng-select": "^20.2.2",
+    "@ngrx/signals": "^20.0.1",
+    "@ngx-translate/core": "^17.0.0",
+    "@ngx-translate/http-loader": "^17.0.0",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.8",
+    "leaflet": "^1.9.4",
+    "ngx-lightbox": "^3.0.0",
     "rxjs": "~7.8.0",
+    "simplebar-angular": "^3.3.2",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular/build": "^20.0.3",
     "@angular/cli": "^20.0.3",
     "@angular/compiler-cli": "^20.0.0",
+    "@angular/localize": "^20.0.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
