--- a/school-fe/package.json
+++ b/school-fe/package.json
@@ -16,6 +16,7 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@lordicon/element": "^2.0.1",
     "@ng-bootstrap/ng-bootstrap": "^19.0.1",
     "@ng-select/ng-select": "^20.2.2",
     "@ngrx/operators": "^20.0.1",
@@ -25,6 +26,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
     "leaflet": "^1.9.4",
+    "lottie-web": "^5.13.0",
     "ngx-lightbox": "^3.0.0",
     "rxjs": "~7.8.0",
     "simplebar-angular": "^3.3.2",
